crates/lang/macro/tests/ui/contract/fail/C-16-function-arg-struct-destructuring.stderr
error: ink! message arguments must have an identifier
  --> $DIR/C-16-function-arg-struct-destructuring.rs:20:28
   |
20 |         pub fn noop(&self, Foo { foo }: Foo) {}
   |                            ^^^^^^^^^^^^^^^^
